# fco-backup-fetcher

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  build-for-linux.sh
.github/workflows/: build-image.yml
docker/run/: Dockerfile
src/: main.rs
