[package]
name = "fco-backup-fetcher"
version = "0.1.0"
authors = ["FCO Backup <ukfcobackup@gmail.com>"]
edition = "2021"

[dependencies]
atom_syndication = "0.12.1"
clap = { version = "4.3.12", features = ["derive"] }
chrono = "0.4"
env_logger = "0.10"
log = "0.4.19"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
serde = "1"
serde_json = "1"
sxd-document = "0.3"
sxd-xpath = "0.4.1"
tokio = { version = "1.29.1", features = ["macros", "rt"] }
webdriver_client = "0.2.0"
